--- a/src/app/blockchain-evote/admin/votingscore-admin/votingscore-admin.component.html
+++ b/src/app/blockchain-evote/admin/votingscore-admin/votingscore-admin.component.html
@@ -23,7 +23,7 @@
                         <div class="flex-row m-2 border-round" style="min-width: 55%; min-height: 200px">
                             <div class="flex-row font-bold m-2 border-round blockBg"
                                 style="min-width: 100%; min-height: 200px">
-                                <div class="flex align-items-center justify-content-center font-bold m-2 border-round"
+                                <!-- <div class="flex align-items-center justify-content-center font-bold m-2 border-round"
                                     style="min-width: 55%; min-height: 150px">
                                     ข้อมูล :
                                     <div class="flex align-items-center justify-content-start font-bold m-3 border-round bg-white"
@@ -37,7 +37,7 @@
                                             ไม่มีข้อมูล
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="flex-row align-items-start justify-content-start font-bold m-2 border-round"
                                     style="min-width: 80%; min-height: 220px">
                                     <div style="margin: 1rem;">
