--- a/src/app/blockchain-evote/admin/candidatelist-admin/candidate-detail/candidate-detail.component.html
+++ b/src/app/blockchain-evote/admin/candidatelist-admin/candidate-detail/candidate-detail.component.html
@@ -15,7 +15,11 @@
                                 style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="Number" class="block">หมายเลข</label>
-                                    <input id="Number" type="text" pInputText [(ngModel)]="candidateData.candiNo" />
+                                    <input id="Number" type="text" pInputText [(ngModel)]="candidateData.candiNo" maxlength="3"/>
+                                    <div>
+                                        <small *ngIf="submited && !candidateData.candiNo"
+                                            class="text-red-500">กรุณากรอกหมายเลข</small>
+                                    </div>
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round"
@@ -23,6 +27,10 @@
                                 <div class="field">
                                     <label for="Number" class="block">พรรค</label>
                                     <input id="Number" type="text" pInputText [(ngModel)]="candidateData.candiParty" />
+                                    <div>
+                                        <small *ngIf="submited && !candidateData.candiParty"
+                                            class="text-red-500">กรุณากรอกพรรค</small>
+                                    </div>
                                 </div>
                             </div>
                         </div>
