--- a/src/app/blockchain-evote/admin/create-election-admin/create-election-admin.component.html
+++ b/src/app/blockchain-evote/admin/create-election-admin/create-election-admin.component.html
@@ -6,31 +6,46 @@
                 <p-panel header="รายละเอียดการเลือกตั้ง">
                     <div class="card" [formGroup]="createForm">
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex-row align-items-start justify-content-start border-round" style="min-width: 100%; min-height: 100px">
-                                <div class="flex align-items-start justify-content-start border-round mb-2" style="min-width: 100%; min-height: 10px">
+                            <div class="flex-row align-items-start justify-content-start border-round"
+                                style="min-width: 100%; min-height: 100px">
+                                <div class="flex align-items-start justify-content-start border-round mb-2"
+                                    style="min-width: 100%; min-height: 10px">
                                     <label for="Number" class="block text-xl"><b>ชื่อหัวข้อการเลือกตั้ง : </b></label>
                                 </div>
-                                <div class="flex align-items-center justify-content-start border-round" style="min-width: 100%px; min-height: 50px">
-                                    <input type="text" pInputText [style]="{width: '100%'}" formControlName="elecName" />
+                                <div class="flex align-items-center justify-content-start border-round"
+                                    style="min-width: 100%px; min-height: 50px">
+                                    <input type="text" pInputText [style]="{width: '100%'}"
+                                        formControlName="elecName" />
                                 </div>
                             </div>
+                            <small *ngIf="submited && !createForm.get('elecName')?.value"
+                                class="text-red-500">กรุณากรอกชื่อหัวข้อการเลือกตั้ง</small>
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex-row align-items-start justify-content-start border-round" style="min-width: 100%; min-height: 100px">
-                                <div class="flex align-items-start justify-content-start border-round mb-2" style="min-width: 100%; min-height: 10px">
+                            <div class="flex-row align-items-start justify-content-start border-round"
+                                style="min-width: 100%; min-height: 100px">
+                                <div class="flex align-items-start justify-content-start border-round mb-2"
+                                    style="min-width: 100%; min-height: 10px">
                                     <label for="Number" class="block text-xl"><b>รายละเอียดการเลือกตั้ง : </b></label>
                                 </div>
-                                <div class="flex align-items-center justify-content-start border-round" style="min-width: 100%px; min-height: 50px">
-                                    <textarea id="float-input" rows="5" cols="30" pInputTextarea [style]="{width: '100%'}" formControlName="elecDetail"></textarea>
+                                <div class="flex align-items-center justify-content-start border-round"
+                                    style="min-width: 100%px; min-height: 50px">
+                                    <textarea id="float-input" rows="5" cols="30" pInputTextarea
+                                        [style]="{width: '100%'}" formControlName="elecDetail"></textarea>
                                 </div>
                             </div>
                         </div>
+                        <small *ngIf="submited && !createForm.get('elecDetail')?.value"
+                            class="text-red-500">กรุณากรอกรายละเอียดการเลือกตั้ง</small>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 10px">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 10px">
                             </div>
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 10px">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 10px">
                             </div>
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 10px">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 10px">
                             </div>
                         </div>
                     </div>
@@ -71,6 +86,8 @@
                                                 <p-calendar [showIcon]="true " inputId="test" [style]="{width: '100%'}"
                                                     appendTo="body" [(ngModel)]="endDate"></p-calendar>
                                             </div>
+                                            <small *ngIf="wrongDate"
+                                                class="text-red-500">กรุณาเลือกวันที่ให้ถูกต้อง</small>
                                         </div>
                                     </div>
                                 </div>
@@ -91,9 +108,9 @@
                                             </div>
                                             <div style="width: 100%">
                                                 <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}"
-                                                    appendTo="body"
-                                                    [(ngModel)]="regisStartdate"></p-calendar>
+                                                    appendTo="body" [(ngModel)]="regisStartdate"></p-calendar>
                                             </div>
+
                                         </div>
                                     </div>
                                     <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300 "
@@ -105,9 +122,12 @@
                                             </div>
                                             <div style="width: 100%">
                                                 <p-calendar [showIcon]="true" inputId="test" [style]="{width: '100%'}"
-                                                    appendTo="body"
-                                                    [(ngModel)]="regisEnddate"></p-calendar>
+                                                    appendTo="body" [(ngModel)]="regisEnddate"></p-calendar>
                                             </div>
+                                            <small *ngIf="wrongRegisDate"
+                                                class="text-red-500">กรุณาเลือกวันที่ให้ถูกต้อง</small>
+                                            <small *ngIf="wrongRegisDatelessStart"
+                                                class="text-red-500">กรุณาเลือกวันที่เริ่มต้นลงคะแนนหลังจากวันที่ปิดรับสมัคร</small>
                                         </div>
                                     </div>
                                 </div>
@@ -123,37 +143,42 @@
             <p-panel header="อัพโหลดรูปภาพ">
                 <div class="flex flex-wrap card-container align-items-center justify-content-start ">
                     <div *ngIf="imageSrc" class="flex m-2 ">
-                        <p-card [style]="{width: '340px'} " styleClass="p-card-shadow ">
-                            <img [src]="imageSrc" id="photo" [style]="{width: '300px',height: '300px'}">
+                        <p-card [style]="{width: '440px'} " styleClass="p-card-shadow ">
+                            <img [src]="imageSrc" id="photo" [style]="{width: '400px',height: '300px'}">
                             <ng-template pTemplate="footer ">
                             </ng-template>
                         </p-card>
                     </div>
                     <label for="buttonClick">
-                    <div class="flex m-2 blockCandidate align-items-center justify-content-center" style="width: 340px;height: 374.8px;cursor: pointer;">
-                       <div class="flex-row">
-                        <div class="card flex align-items-center justify-content-center">
-                            <i class="pi pi-plus" style="font-size: 2rem"></i>
+                        <div class="flex m-2 blockCandidate align-items-center justify-content-center"
+                            style="width: 340px;height: 374.8px;cursor: pointer;">
+                            <div class="flex-row">
+                                <div class="card flex align-items-center justify-content-center">
+                                    <i class="pi pi-plus" style="font-size: 2rem"></i>
+                                </div>
+                                <div class="card flex align-items-center justify-content-center m-2">
+                                    เพิ่มรูปปกการเลือกตั้ง
+                                </div>
+                            </div>
                         </div>
-                        <div class="card flex align-items-center justify-content-center m-2">
-                            เพิ่มรูปปกการเลือกตั้ง
-                        </div>
-                       </div> 
-                    </div>
-                </label>
-                    <input type="file" id="buttonClick" style="display: none;visibility: hidden;" accept="image/*" (change)="selectImage($event)">
+                    </label>
+                    <input type="file" id="buttonClick" style="display: none;visibility: hidden;" accept="image/*"
+                        (change)="selectImage($event)">
                 </div>
             </p-panel>
         </div>
     </div>
     <div class="flex m-2 align-items-center justify-content-center">
-        <button pButton type="button" class="p-button buttonColor" label="สร้างการเลือกตั้ง" style="width: 20%;" (click)="create()"></button>
+        <button pButton type="button" class="p-button buttonColor" label="สร้างการเลือกตั้ง" style="width: 20%;"
+            (click)="create()"></button>
     </div>
 </div>
 <div style="margin-top:2%; "></div>
 <app-footer></app-footer>
 <p-toast></p-toast>
-<p-dialog [(visible)]="displayModal" [modal]="true" [style]="{width: '30vw'}" [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false" [transitionOptions]="'280ms'">
+<p-dialog [(visible)]="displayModal" [modal]="true" [style]="{width: '30vw'}"
+    [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false"
+    [transitionOptions]="'280ms'">
     <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
         <img src="assets\img\icon\status_yes.png" height="65" width="65">
     </div>
