--- a/src/app/blockchain-evote/admin/managevoter-admin/election1-comingsoon-voter/election1-comingsoon-voter.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/election1-comingsoon-voter/election1-comingsoon-voter.component.html
@@ -146,9 +146,12 @@
                                         <th>รหัสนักศึกษา</th>
                                         <th style="width: 10rem;">ชื่อ</th>
                                         <th style="width: 10rem;">นามสกุล</th>
-                                        <th style="width: 10rem;">ชั้นปี</th>
+                                        <th class="justify-content-center" style="width: 6rem">
+                                            <div class="justify-content-center">
+                                                ชั้นปี
+                                            </div>
+                                        </th>
                                         <th style="width: 15rem;">สาขาวิชา</th>
-                                        <th style="width: 15rem;">คณะ</th>
                                         <th style="width: 5rem;"></th>
                                     </tr>
                                 </ng-template>
@@ -164,10 +167,12 @@
                                             {{studentDetail.lastName}}
                                         </td>
                                         <td>
-                                            {{studentDetail.studentMajor}}
+                                            <div class="flex justify-content-center">
+                                                {{studentDetail.studentClassyear}}
+                                            </div>
                                         </td>
                                         <td>
-                                            {{studentDetail.studentFaculty}}
+                                            {{studentDetail.studentMajor}}
                                         </td>
                                         <td>
                                             <button pButton type="button" class="p-button-danger" label="ลบ"
@@ -208,8 +213,12 @@
                                         <th>รหัสนักศึกษา</th>
                                         <th style="width: 10rem;">ชื่อ</th>
                                         <th style="width: 10rem;">นามสกุล</th>
+                                        <th class="justify-content-center" style="width: 6rem">
+                                            <div class="justify-content-center">
+                                                ชั้นปี
+                                            </div>
+                                        </th>
                                         <th style="width: 15rem;">สาขาวิชา</th>
-                                        <th style="width: 15rem;">คณะ</th>
                                         <th style="width: 5rem;"></th>
                                     </tr>
                                 </ng-template>
@@ -225,10 +234,12 @@
                                             {{studentDetail.lastName}}
                                         </td>
                                         <td>
-                                            {{studentDetail.studentMajor}}
+                                            <div class="flex justify-content-center">
+                                                {{studentDetail.studentClassyear}}
+                                            </div>
                                         </td>
                                         <td>
-                                            {{studentDetail.studentFaculty}}
+                                            {{studentDetail.studentMajor}}
                                         </td>
                                         <td>
                                             <button pButton type="button" class="p-button-success" label="เพิ่ม"
