--- a/src/app/blockchain-evote/user/regis-status/edit-register/edit-register.component.html
+++ b/src/app/blockchain-evote/user/regis-status/edit-register/edit-register.component.html
@@ -3,8 +3,37 @@
     <div class="card-container overflow-hidden">
         <div class="flex">
             <div class="flex-1 flex align-items-center justify-content-center m-2">
-                <p-panel header="ใบลงทะเบียนนายกสโมสร">
+                <p-panel header="แก้ไขใบลงทะเบียน{{election[0].election.elecName}}">
                     <div class="card">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                            <div class="flex align-items-baseline justify-content-left">
+                                <label for="perInfo" class="block"><b>ข้อมูลการลงสมัคร</b></label>
+                            </div>
+                        </div>
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 100px">
+                                <div class="field">
+                                    <label for="Number" class="block">หมายเลข</label>
+                                    <input id="Number" type="text" pInputText  [(ngModel)]="candidateData.candiNo"/>
+                                    <div>
+                                        <small *ngIf="submited && !candidateData.candiNo"
+                                        class="text-red-500">กรุณากรอกหมายเลข</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 100px">
+                                <div class="field">
+                                    <label for="Number" class="block">พรรค</label>
+                                    <input id="Number" type="text" pInputText [(ngModel)]="candidateData.candiParty"/>
+                                    <div>
+                                        <small *ngIf="submited && !candidateData.candiParty"
+                                        class="text-red-500">กรุณากรอกพรรค</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!-- ข้อมูลส่วนตัว -->
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-baseline justify-content-left">
@@ -12,12 +41,6 @@
                             </div>
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
-                                <div class="field" [formGroup]="regisForm">
-                                    <label for="Number" class="block">หมายเลข</label>
-                                    <input id="Number" type="text" pInputText formControlName="candidateNo" />
-                                </div>
-                            </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="prefix" class="block">คำนำหน้าชื่อ</label>
@@ -188,17 +211,17 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 1</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText formControlName="position1" [(ngModel)]="candidateData.candiExpList[0].position" />
+                                    <input id="studentID" type="text" pInputText [(ngModel)]="candidateData.candiExpList[0].position" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar formControlName="pYear1" view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[0].years"></p-calendar>
+                                    <p-calendar view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[0].years"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -207,17 +230,17 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 2</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText formControlName="position2" [(ngModel)]="candidateData.candiExpList[1].position" />
+                                    <input id="studentID" type="text" pInputText [(ngModel)]="candidateData.candiExpList[1].position" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar formControlName="pYear2" view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[1].years"></p-calendar>
+                                    <p-calendar view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[1].years"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -226,17 +249,17 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 3</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText formControlName="position3" [(ngModel)]="candidateData.candiExpList[2].position" />
+                                    <input id="studentID" type="text" pInputText [(ngModel)]="candidateData.candiExpList[2].position" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar formControlName="pYear3" view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[2].years"></p-calendar>
+                                    <p-calendar  view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[2].years"></p-calendar>
                                 </div>
                             </div>
                         </div>
