--- a/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
+++ b/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
@@ -3,7 +3,7 @@
     <div class="card-container overflow-hidden">
         <div class="flex">
             <div class="flex-1 flex align-items-center justify-content-center m-2">
-                <p-panel header="ใบลงทะเบียนนายกสโมสร">
+                <p-panel header="ใบลงทะเบียน{{election.elecName}}">
                     <div class="card">
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-baseline justify-content-left">
@@ -14,15 +14,12 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round"
                                 style="min-width: 200px; min-height: 100px">
                                 <div class="field" [formGroup]="regisForm">
-                                    <label for="Number" class="block">หมายเลข</label>
-                                    <input id="Number" type="text" pInputText formControlName="candidateNo" />
-                                </div>
-                            </div>
-                            <div class="flex align-items-center justify-content-center m-2 border-round"
-                                style="min-width: 200px; min-height: 100px">
-                                <div class="field" [formGroup]="regisForm">
                                     <label for="Number" class="block">พรรค</label>
-                                    <input id="Number" type="text" pInputText formControlName="candidateParty" />
+                                    <input id="Number" type="text" pInputText formControlName="candiParty" />
+                                    <div>
+                                        <small *ngIf="submited && !regisForm.get('candiParty')?.value"
+                                        class="text-red-500">กรุณากรอกพรรค</small>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -33,12 +30,6 @@
                             </div>
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
-                                <div class="field" [formGroup]="regisForm">
-                                    <label for="Number" class="block">หมายเลข</label>
-                                    <input id="Number" type="text" pInputText  />
-                                </div>
-                            </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="prefix" class="block">คำนำหน้าชื่อ</label>
@@ -308,5 +299,13 @@
     </div>
     <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
         <H1>ลงทะเบียนสำเร็จ</H1>
+    </div>
+</p-dialog>
+<p-dialog [(visible)]="displayModalCheck" [modal]="true" [style]="{width: '30vw'}" [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false" [transitionOptions]="'280ms'">
+    <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
+        <img src="assets\img\icon\status_yes.png" height="65" width="65">
+    </div>
+    <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
+        <H1>เคยลงทะเบียนแล้ว</H1>
     </div>
 </p-dialog>
