--- a/src/app/blockchain-evote/user/register/register.component.html
+++ b/src/app/blockchain-evote/user/register/register.component.html
@@ -1,5 +1,6 @@
 <app-menu-bar></app-menu-bar>
-<p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [numVisible]="5" [circular]="true" [showItemNavigators]="true" [showThumbnails]="false">
+<p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [numVisible]="5" [circular]="true"
+    [showItemNavigators]="true" [showThumbnails]="false">
     <ng-template pTemplate="item" let-item>
         <img [src]="item.previewImageSrc" style="width: 70%; display: block;" />
     </ng-template>
@@ -23,33 +24,39 @@
 </div>
 <div class="card">
     <div class="flex flex-wrap card-container align-items-center m-2" style="max-width: 100%">
-        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px" *ngFor="let elec of election">
+        <div class="flex align-items-center justify-content-center font-bold text-white m-2 ml-2 border-round"
+            style="min-width: 200px; min-height: 100px" *ngFor="let elec of election">
             <p-card [style]="{width: '360px'}" styleClass="p-card-shadow">
                 <ng-template pTemplate="header">
                     <div class="flex justify-content-center">
-                        <img alt="Card" src="api/candidate/image/{{elec.elecImages}}" [style]="{width: '350px',height: '200px'}" (error)="defaultImage($event)">
+                        <img alt="Card" src="api/candidate/image/{{elec.election.elecImages}}"
+                            [style]="{width: '350px',height: '200px'}" (error)="defaultImage($event)">
                     </div>
-                    <div class="flex justify-content-left font-bold text-xl m-3" >
+                    <div class="flex justify-content-left font-bold text-xl m-3">
                         <p style="width:340px;height:auto;word-wrap: break-word;">
-                            {{elec.elecName}}
+                            {{elec.election.elecName}}
                         </p>
                     </div>
                 </ng-template>
-                    <p style="height: 72px;">
-                        {{elec.elecDetail}}
-                    </p>
-                    <div style="margin-top: 1rem">
-                        <b>
-                            <p>
-                                เริ่มต้น : {{elec.elecStartdate | formatDate}}
-                            </p>
-                            <p>
-                                สิ้นสุด : {{elec.elecEnddate | formatDate}}
-                            </p>
-                        </b>
-                    </div>
+                <p style="height: 72px;">
+                    {{elec.election.elecDetail}}
+                </p>
+                <div style="margin-top: 1rem">
+                    <b>
+                        <p>
+                            เริ่มต้น : {{elec.election.elecRegisStartdate | formatDate}}
+                        </p>
+                        <p>
+                            สิ้นสุด : {{elec.election.elecRegisEnddate | formatDate}}
+                        </p>
+                    </b>
+                </div>
                 <ng-template pTemplate="footer">
-                    <button pButton type="button" class="p-button buttonColor" label="ลงทะเบียน" [style]="{width: '100%'}" (click)="goToRegister(elec.elecId)"></button>
+                    <button *ngIf="elec.regis == true" pButton type="button" class="p-button buttonColor"
+                        label="ลงทะเบียนแล้ว" [style]="{width: '100%'}" disabled="true"></button>
+                    <button *ngIf="elec.regis == false" pButton type="button" class="p-button buttonColor"
+                        label="ลงทะเบียน" [style]="{width: '100%'}"
+                        (click)="goToRegister(elec.election.elecId)"></button>
                 </ng-template>
             </p-card>
         </div>
